--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "fast-average-color": "^9.1.1",
     "helmet": "^6.0.0",
     "jest": "^29.0.3",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.1",
